Fix Redis ticket registry over-memory consumption
# Conflicts:
#	support/cas-server-support-redis-ticket-registry/src/main/java/org/apereo/cas/ticket/registry/RedisTicketRegistry.java